--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lucy",
+  "name": "bot",
   "version": "0.1.0",
   "description": "A WhatsApp bot written in TypeScript using Baileys",
-  "author": "von strucker",
+  "author": "dk",
   "main": "dist/bot.js",
   "keywords": [
     "bot",
@@ -31,14 +31,11 @@
     "@shineiichijo/nhentai-ts": "^1.0.0",
     "@typegoose/typegoose": "^10.0.0",
     "@whiskeysockets/baileys": "^6.4.1",
-    "anime-quiz": "^3.0.0",
     "axios": "^1.4.0",
     "axios-cache-interceptor": "^1.0.1",
     "canvacord": "^5.4.9",
     "chalk": "4.1.1",
     "cheerio": "^1.0.0-rc.12",
-    "chess-image-generator-ts": "^1.0.0",
-    "chess-node": "^1.1.0",
     "dotenv": "^16.0.3",
     "emoji-regex": "^10.2.1",
     "events": "^3.3.0",
@@ -57,7 +54,6 @@
     "prettier": "^2.8.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
-    "slot-machine": "^2.1.0",
     "spotifydl-x": "^0.3.5",
     "telegraph-uploader": "^2.0.0",
     "typed-emitter": "^2.1.0",
