--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "spotifydl-x": "^0.3.5",
+    "telegraph-uploader": "^2.0.0",
     "typed-emitter": "^2.1.0",
     "wa-sticker-formatter": "^4.3.2",
     "youtubedl-core": "^4.11.5"
