--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "telegraph-uploader": "^2.0.0",
     "typed-emitter": "^2.1.0",
     "wa-sticker-formatter": "^4.3.2",
-    "youtubedl-core": "^4.11.5"
+    "npm install ytdl-core@latest"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
