--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
   ],
   "logo": "https://raw.githubusercontent.com/AliAryanTech/Chisato-WhatsApp/master/assets/images/chisato.png",
   "website": "https://github.com/AliAryanTech/Chisato-WhatsApp#readme",
-  "repository": "https://github.com/AliAryanTech/Chisato-WhatsApp.git",
+  "repository": "https://github.com/Dkhitman3/Bot.git",
   "success_url": "/",
   "env": {
     "BOT_NAME": {
