--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "whatsapp-anime-bot"
   ],
   "logo": "https://raw.githubusercontent.com/AliAryanTech/Chisato-WhatsApp/master/assets/images/chisato.png",
-  "website": "https://github.com/AliAryanTech/Chisato-WhatsApp#readme",
+  "website": "https://github.com/Dkhitman3/Bot#readme",
   "repository": "https://github.com/Dkhitman3/Bot.git",
   "success_url": "/",
   "env": {
