--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
     "whatsapp-bot",
     "whatsapp-anime-bot"
   ],
-  "logo": "https://raw.githubusercontent.com/AliAryanTech/Chisato-WhatsApp/master/assets/images/chisato.png",
+  "logo": "https://raw.githubusercontent.com/Dkhitman3/Hitman47/master/assets/images/hitman47.png",
   "website": "https://github.com/Dkhitman3/Bot#readme",
-  "repository": "https://github.com/Dkhitman3/Bot.git",
+  "repository": "https://github.com/Dkhitman3/Hitman47.git",
   "success_url": "/",
   "env": {
     "BOT_NAME": {
