--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typegoose/typegoose": "^10.0.0",
     "@whiskeysockets/baileys": "^6.4.1",
     "axios": "^1.4.0",
+    "anime-quiz": "^3.0.0",
     "axios-cache-interceptor": "^1.0.1",
     "canvacord": "^5.4.9",
     "chalk": "4.1.1",
