--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "canvacord": "^5.4.9",
     "chalk": "4.1.1",
     "cheerio": "^1.0.0-rc.12",
+    "chess-image-generator-ts": "^1.0.0",
+    "chess-node": "^1.1.0",
     "dotenv": "^16.0.3",
     "emoji-regex": "^10.2.1",
     "events": "^3.3.0",
@@ -53,6 +55,7 @@
     "prettier": "^2.8.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
+    "slot-machine": "^2.1.0",
     "spotifydl-x": "^0.3.5",
     "telegraph-uploader": "^2.0.0",
     "typed-emitter": "^2.1.0",
