--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hitman47",
+  "name": "Godspeed",
   "version": "0.1.0",
   "description": "A WhatsApp bot written in TypeScript using Baileys",
   "author": "dk",
@@ -17,12 +17,12 @@
     "postinstall": "yarn build"
   },
   "bugs": {
-    "url": "https://github.com/Dkhitman3/Bot/issues"
+    "url": "https://github.com/ChristianNimb/Bot/issues"
   },
-  "homepage": "https://github.com/Dkhitman3/Bot",
+  "homepage": "https://github.com/ChristianNimb/Bot",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Dkhitman3/Bot.git"
+    "url": "https://github.com/ChristianNimb/Bot.git"
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
