--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chess-image-generator-ts": "^1.0.0",
     "chess-node": "^1.1.0",
     "dotenv": "^16.0.3",
+    "node-cron": "^3.0.0",
     "emoji-regex": "^10.2.1",
     "events": "^3.3.0",
     "express": "^4.18.2",
@@ -52,6 +53,7 @@
     "mongoose": "^6.7.0",
     "path": "^0.12.7",
     "pino": "^8.7.0",
+    "pokenode-ts": "^1.14.0",
     "prettier": "^2.8.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
