--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "whatsapp-anime-bot"
   ],
   "logo": "https://raw.githubusercontent.com/Dkhitman3/Hitman47/master/assets/images/hitman.png",
-  "website": "https://github.com/Dkhitman3/Bot#readme",
+  "website": "https://github.com/Dkhitman3/Hitman47#readme",
   "repository": "https://github.com/Dkhitman3/Hitman47.git",
   "success_url": "/",
   "env": {
