--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Hitman47",
+  "name": "Dk",
   "version": "0.1.0",
   "description": "A WhatsApp bot written in TypeScript using Baileys",
-  "author": "dk",
+  "author": "Alι_Aryαɴ & Lucky Yambem",
   "main": "dist/bot.js",
   "keywords": [
     "bot",
@@ -17,59 +17,57 @@
     "postinstall": "yarn build"
   },
   "bugs": {
-    "url": "https://github.com/Dkhitman3/Bot/issues"
+    "url": "https://github.com/AliAryanTech/Chisato-WhatsApp/issues"
   },
-  "homepage": "https://github.com/Dkhitman3/Bot",
+  "homepage": "https://github.com/AliAryanTech/Chisato-WhatsApp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Dkhitman3/Bot.git"
+    "url": "https://github.com/AliAryanTech/Chisato-WhatsApp.git"
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
+    "@distube/ytdl-core": "^4.14.1",
     "@shineiichijo/canvas-chan": "^1.0.1",
     "@shineiichijo/marika": "^2.0.6",
     "@shineiichijo/nhentai-ts": "^1.0.0",
     "@typegoose/typegoose": "^10.0.0",
     "@whiskeysockets/baileys": "^6.7.2",
-    "@distube/ytdl-core": "latest",
-    "axios": "^1.4.0",
     "anime-quiz": "^3.0.0",
-    "axios-cache-interceptor": "^1.0.1",
-    "canvacord": "^5.4.9",
+    "axios": "^1.7.3",
+    "canvacord": "^5.4.8",
     "chalk": "4.1.1",
     "cheerio": "^1.0.0-rc.12",
     "chess-image-generator-ts": "^1.0.0",
     "chess-node": "^1.1.0",
     "dotenv": "^16.0.3",
-    "node-cron": "^3.0.0",
     "emoji-regex": "^10.2.1",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "fs-extra": "^11.1.0",
+    "fs-extra": "^11.2.0",
     "imgur": "^2.2.0",
     "link-preview-js": "^3.0.4",
     "linkifyjs": "^4.0.2",
     "moment-timezone": "^0.5.40",
     "mongoose": "^6.7.0",
+    "node-cron": "^3.0.0",
     "path": "^0.12.7",
-    "pino": "^8.7.0",
+    "pino": "^9.3.2",
     "pokenode-ts": "^1.14.0",
-    "prettier": "^2.8.1",
+    "prettier": "^3.3.3",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "slot-machine": "^2.1.0",
-    "spotifydl-x": "^0.3.5",
+    "spotifydl-x": "^0.3.0",
     "telegraph-uploader": "^2.0.0",
     "typed-emitter": "^2.1.0",
-    "wa-sticker-formatter": "^4.3.2",
-    "youtubedl-core": "^4.11.5"
+    "wa-sticker-formatter": "^4.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
-    "@types/fs-extra": "^9.0.13",
+    "@types/fs-extra": "^11.0.4",
     "@types/node-cron": "^3.0.1",
-    "@types/prettier": "^2.7.1",
+    "@types/prettier": "^3.0.0",
     "@types/qr-image": "^3.2.5",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
